# sf_ddl_conversion_agent

./: .env  client.py  main.py  pyproject.toml  server.py  test.py
